[gd_scene load_steps=18 format=3 uid="uid://cpohawpci1tla"]

[ext_resource type="Script" path="res://MrGraye/MrGraye.gd" id="1_2q82o"]
[ext_resource type="PackedScene" uid="uid://xsejqut0jhwg" path="res://Assets/Objects/bullet.tscn" id="2_twoe2"]
[ext_resource type="Texture2D" uid="uid://d33ft0h5vdiho" path="res://Tilesets/CharB.png" id="2_w7vk0"]
[ext_resource type="Texture2D" uid="uid://dmff7k2pi2o3a" path="res://Tilesets/CharW.png" id="3_xq6lr"]
[ext_resource type="AudioStream" uid="uid://2h87l4umiibw" path="res://Assets/Audio/SuppressedPistolShort.mp3" id="4_aj36i"]
[ext_resource type="AudioStream" uid="uid://b3mftvp0027u" path="res://Assets/Audio/stepSound.mp3" id="5_5jq32"]
[ext_resource type="AudioStream" uid="uid://c30rm6g5lkcum" path="res://Assets/Audio/reloadSound.mp3" id="7_vtjxh"]

[sub_resource type="Animation" id="Animation_hagi1"]
resource_name = "FAway"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}

[sub_resource type="Animation" id="Animation_02wh5"]
resource_name = "FLeft"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}

[sub_resource type="Animation" id="Animation_qk3xg"]
resource_name = "FRight"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}

[sub_resource type="Animation" id="Animation_o8pet"]
resource_name = "FTo"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_wg36u"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_wnqrf"]
resource_name = "WalkAway"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [10, 9]
}

[sub_resource type="Animation" id="Animation_fp1eq"]
resource_name = "WalkL"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [5, 4]
}

[sub_resource type="Animation" id="Animation_adby6"]
resource_name = "WalkR"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [7, 6]
}

[sub_resource type="Animation" id="Animation_3uo3k"]
resource_name = "WalkTo"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [1, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_eea8b"]
_data = {
"FAway": SubResource("Animation_hagi1"),
"FLeft": SubResource("Animation_02wh5"),
"FRight": SubResource("Animation_qk3xg"),
"FTo": SubResource("Animation_o8pet"),
"RESET": SubResource("Animation_wg36u"),
"WalkAway": SubResource("Animation_wnqrf"),
"WalkL": SubResource("Animation_fp1eq"),
"WalkR": SubResource("Animation_adby6"),
"WalkTo": SubResource("Animation_3uo3k")
}

[node name="MrGraye" type="CharacterBody2D" groups=["player"]]
script = ExtResource("1_2q82o")
bullet = ExtResource("2_twoe2")

[node name="Black" type="Sprite2D" parent="."]
scale = Vector2(5, 5)
texture = ExtResource("2_w7vk0")
hframes = 3
vframes = 4

[node name="BlAni" type="AnimationPlayer" parent="Black"]
libraries = {
"": SubResource("AnimationLibrary_eea8b")
}

[node name="White" type="Sprite2D" parent="."]
visible = false
scale = Vector2(5, 5)
texture = ExtResource("3_xq6lr")
hframes = 3
vframes = 4

[node name="WhAni" type="AnimationPlayer" parent="White"]
libraries = {
"": SubResource("AnimationLibrary_eea8b")
}

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PackedVector2Array(-25, 50, 16, 50, 16, 42, 11, 39, 10, 12, 29, -1, 16, -10, 18, -19, 18, -39, 8, -47, -7, -48, -20, -39, -19, -25, -17, -17, -16, -11, -21, -7, -29, -3, -15, 10, -18, 38, -25, 42)

[node name="Cam" type="Camera2D" parent="."]

[node name="Audio" type="Node" parent="."]

[node name="mgHit" type="AudioStreamPlayer" parent="Audio"]

[node name="Shoot" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("4_aj36i")
volume_db = -17.829

[node name="stepSound" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("5_5jq32")
volume_db = -7.924

[node name="reloadSound" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("7_vtjxh")

[node name="egR" type="Marker2D" parent="."]
position = Vector2(42, -5)

[node name="egL" type="Marker2D" parent="."]
position = Vector2(-42, -5)

[node name="egT" type="Marker2D" parent="."]
position = Vector2(-20, 12)

[node name="egA" type="Marker2D" parent="."]
position = Vector2(25, -6)

[connection signal="animation_finished" from="Black/BlAni" to="." method="_on_step_finish_black"]
[connection signal="animation_started" from="Black/BlAni" to="." method="_on_step_start_black"]
[connection signal="animation_finished" from="White/WhAni" to="." method="_on_step_finish_white"]
[connection signal="animation_started" from="White/WhAni" to="." method="_on_step_start_white"]
